--- a/assets/less/header.less
+++ b/assets/less/header.less
@@ -52,6 +52,7 @@
 		&.scrolled, &.paged {
 			.main-header {
 				width: @sidebar-width-normal;
+				height: 110vh;
 
 				.page-title {
 					font-size: 3vh;
